fix some layout bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,8 +19,3 @@
     padding: 45px;
   }
 }
-
-/* todo 待修改 */
-.MuiGrid-item {
-  padding: 0 !important;
-}
